Edited and proofread

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,21 @@ output:
 
 ## Loading and preprocessing the data
 
-We load the data from the current folder.
+We load the data from the current folder and add a new column representing the day of the week.
 ```{r}
-steps <- read.csv("activity.csv", header=TRUE)
-steps$date <- as.Date(steps$date)
+activity <- read.csv("activity.csv", header=TRUE)
+activity$date <- as.Date(activity$date)
+activity$day <- weekdays(activity$date)
+str(activity)
 ```
 
 ## What is mean total number of steps taken per day?
 
 First we sum the steps across each day and plot a histogram of the number of steps per day.
 ```{r}
-stepsday <- aggregate(steps$steps, list(steps$date), sum)
-colnames(stepsday) <- c("day", "steps")
+#Do not use na.rm for aggregate function, or will get histogram that include days with missing steps
+stepsday <- aggregate(activity$steps, list(activity$date), sum)
+colnames(stepsday) <- c("date", "steps")
 hist(stepsday$steps, main = "Total steps taken per day", xlab = "Steps", ylim = c(0,30))
 ```
 
@@ -38,7 +41,7 @@ The mean of the total number of steps taken per day is `r format(meansteps, scie
 
 First, we make a time series plot of the average number of steps taken through the day, as averaged across all days.
 ```{r}
-stepsblock <- aggregate(steps$steps, list(steps$interval), mean, na.rm = TRUE)
+stepsblock <- aggregate(activity$steps, list(activity$interval), mean, na.rm = TRUE)
 colnames(stepsblock) <- c("interval", "steps")
 plot(stepsblock, type = "l")
 ```
@@ -52,34 +55,34 @@ The interval in which the maximum number of steps occurs is `r intervalMax$inter
 
 ## Imputing missing values
 
-First we calculcate the number of rows with missing values.
+First we calculate the number of rows with missing values.
 ```{r}
-missing <- sum(is.na(steps$steps))
+missing <- sum(is.na(activity$steps))
 missing
 ```
 There are `r missing` rows with missing values. 
 
 To determine our strategy for imputing missing values, we will first check the pattern of missing values across days.
 ```{r}
-table(weekdays(steps$date), is.na(steps$steps))
+table(activity$day, is.na(activity$steps))
 ```
-In each case, values are missing for a full day, and the mix of days is uneven.
+Where values are missing, they are missing for a full day, and the mix of days is uneven.
 
-As a result (and anticipating later analysis comparing weekdays and weekends), we will impute values by determining the mean steps for each interval for each day, and use that to fill the missing values for those days with no entries.
+As a result (and anticipating later analysis comparing weekdays and weekends), we will impute values by determining the mean steps for each interval and for each day of the week, and use that to fill the missing values for those days with no entries.
 
-First we create our imputed dataset by finding the mean across days and intervals. We then fill the missing values.
+We create our imputed dataset by finding the mean across days and intervals. We then fill the missing values.
 ```{r}
 # Create dataset of mean values that will be used to fill gaps
-imputed <- aggregate(steps ~ weekdays(date) + interval, data = steps, FUN = mean, na.rm = TRUE)
+imputed <- aggregate(steps ~ day + interval, data = activity, FUN = mean, na.rm = TRUE)
 
 # Create a new data.frame for complete dataset and a loop to fill missing values
-stepsComplete <- steps
+complete <- activity
 
-for (i in 1:dim(stepsComplete)[1]) {
-    if (is.na(stepsComplete$steps[i])) {
-        day <- weekdays(stepsComplete$date[i])
-        interval <- stepsComplete$interval[i]
-        stepsComplete$steps[i] <- imputed$steps[imputed$`weekdays(date)` == day & imputed$interval == interval]
+for (i in 1:dim(complete)[1]) {
+    if (is.na(complete$steps[i])) {
+        day <- complete$day[i]
+        interval <- complete$interval[i]
+        complete$steps[i] <- imputed$steps[imputed$day == day & imputed$interval == interval]
     }
 }
 ```
@@ -87,8 +90,8 @@ for (i in 1:dim(stepsComplete)[1]) {
 For this new complete dataset, we produce a histogram of the steps each day, and the new mean and median steps taken.
 ```{r}
 #Calculate the average steps per day
-stepsdayImputed <- aggregate(stepsComplete$steps, list(stepsComplete$date), sum)
-colnames(stepsdayImputed) <- c("day", "steps")
+stepsdayImputed <- aggregate(complete$steps, list(complete$date), sum)
+colnames(stepsdayImputed) <- c("date", "steps")
 
 #Produce the histogram
 hist(stepsdayImputed$steps, main = "Total steps taken per day", xlab = "Steps", ylim = c(0,40))
@@ -101,16 +104,13 @@ medianstepsImputed <- round(median(stepsdayImputed$steps, na.rm = TRUE), 0)
 medianstepsImputed
 ```
 
-For the complete dataset with missing valuies imputed, the mean of the total number of steps taken per day is `r format(meanstepsImputed, scientific=FALSE)`. The median of the total number of steps taken per day is `r format(medianstepsImputed, scientific=FALSE)`.
+For the complete dataset with missing values imputed, the mean of the total number of steps taken per day is `r format(meanstepsImputed, scientific=FALSE)`. The median of the total number of steps taken per day is `r format(medianstepsImputed, scientific=FALSE)`. (Note: if we had taken the mean across all days, this mean would not have changed from the earlier answer - and the median would have been equal to the mean - coming from one of the imputed days.)
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
-First we create a new factor to identify whether the day is a weekday or weekend, and append it in a new column to our complete dataset.
+First we develop a function to identify whether the day of the week is a weekday or weekend, and append it in a new column to our complete dataset.
 ```{r}
-# Create a new column with the day of the week
-stepsComplete$we <- weekdays(stepsComplete$date)
-
-#Develop a function to identify whether the day of the week is a weekend or weekday, and convert factors in the new column to weekday or weekend
+#Develop a function to identify whether the day of the week is a weekend or weekday, and create a new column to store the result
 we <- function(x) {
     if (x == "Monday" | x == "Tuesday" | x == "Wednesday" | x == "Thursday" | x == "Friday") {
         y <- "weekday"
@@ -121,19 +121,23 @@ we <- function(x) {
     y
 }
 
-for (i in 1:dim(stepsComplete)[1]) {
-    stepsComplete$we[i] <- we(stepsComplete$we[i])
+complete$we <- complete$day
+for (i in 1:dim(complete)[1]) {
+    complete$we[i] <- we(complete$we[i])
 }
 ```
 
 We then average across weekdays and weekends to create plots of the average steps in each interval for weekdays and weekends.
 ```{r}
 #Average across weedays and weekends
-stepsWeekAverage <- aggregate(steps ~ interval + we, data = stepsComplete, FUN = mean)
+stepsWeekAverage <- aggregate(steps ~ interval + we, data = complete, FUN = mean)
 
 #Plot 
 library(lattice)
 xyplot(steps ~ interval | we, data=stepsWeekAverage, type="l", layout = c(1, 2))
+
+#Determine the mean number of steps
+aggregate(steps ~ we, data = stepsWeekAverage, FUN = sum)
 ```
 
-There are differences in the patterns between weekdays and weekends. Weekdays have more steps early in the day and less through the body of the day, while weekends have a more even distribution of steps.
+There are differences in the patterns between weekdays and weekends. Weekdays have more steps early in the day and less through the body of the day, while weekends have a more even distribution of steps. On average, more steps are taken on a weekend.
